--- a/Aprendizaje_Reforzado/Cuadernos/ar_DQN_Learning.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_DQN_Learning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:red\"><center>Q-Learning con redes neuronales, algoritmo DQN.</center></span>"
+    "# <span style=\"color:#F72585\"><center>Q-Learning con redes neuronales, algoritmo DQN.</center></span>"
    ]
   },
   {
