--- a/Aprendizaje_Reforzado/Cuadernos/ar_chat_bots.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_chat_bots.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# <span style=\"color:red\"><center>Ideas generales para un chatbot avanzado</center></span>"
+    "# <span style=\"color:#F72585\"><center>Ideas generales para un chatbot avanzado</center></span>"
    ]
   },
   {
