--- a/Aprendizaje_Reforzado/Cuadernos/ar_Aprendizaje_Reforzado_Intro.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_Aprendizaje_Reforzado_Intro.ipynb
@@ -6,7 +6,7 @@
     "tags": []
    },
    "source": [
-    "# <span style=\"color:red\"><center>Aprendizaje por refuerzo - Introducción <center></span>"
+    "# <span style=\"color:#F72585\"><center>Aprendizaje por refuerzo - Introducción <center></span>"
    ]
   },
   {
@@ -545,7 +545,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -560,6 +560,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+   }
   }
  },
  "nbformat": 4,
