--- a/Aprendizaje_Reforzado/Cuadernos/ar_Actor_Critico.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_Actor_Critico.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(Actor-crítico)=\n",
     "# <span style=\"color:#F72585\"><center>Método Actor-Crítico</center></span>"
    ]
   },
