--- a/Aprendizaje_Reforzado/Cuadernos/ar_Metodo_Entropia_Cruzada_implementacion.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_Metodo_Entropia_Cruzada_implementacion.ipynb
@@ -7,6 +7,7 @@
     "tags": []
    },
    "source": [
+    "(Implementación del Método de entropía cruzada)=\n",
     "# <span style=\"color:#F72585\"><center>Método entropía cruzada</center></span>"
    ]
   },
