--- a/Aprendizaje_Reforzado/Cuadernos/ar_Q_Learning-02.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_Q_Learning-02.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "Pero cuando hay miles de millones de estados diferentes y cientos de acciones distintas, la tabla se vuelve enorme, y no es viable su utilización. Por ello se introdujo el Q-learning profundo (DQN).\n",
     "\n",
-    "Antes de introducir los conceptos de DQN vamos a dar un paso adelante, generalizando los métodos de iteración de valores e iteración de  acciones presentados en la lección [Q-learning](ar_QLearning.ipynb)."
+    "Antes de introducir los conceptos de DQN vamos a dar un paso adelante, generalizando los métodos de iteración de valores e iteración de  acciones presentados en la lección {ref}`Q-learning`."
    ]
   },
   {
@@ -57,15 +57,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los métodos de iteración de valores e iteración de  acciones  introducidos en la lección [Q-learning](ar_QLearning.ipynb), reqieren en cada paso recorrer toda la tabla de la función $Q(s,a)$ en cada iteración. En ambientes realistas, puede ocurrir que algunos estados no son mostrados frecuentemente por el ambiente. Entonces, deberiamos tener cuidado con esa situación.\n",
+    "Los métodos de iteración de valores e iteración de  acciones  introducidos en la lección {ref}`Q-learning`, reqieren en cada paso recorrer toda la tabla de la función $Q(s,a)$ en cada iteración. En ambientes realistas, puede ocurrir que algunos estados no son mostrados frecuentemente por el ambiente. Entonces, deberiamos tener cuidado con esa situación.\n",
     "\n",
-    "Vamoa a hacer la siguiente modificación que es conocida genéricamente como `Q-learning`. Los métodos de iteración de valores e iteración de  acciones  introducidos en la lección [Q-learning](ar_QLearning.ipynb) son casos particulares, tomando $\\alpha=1$ en lo que sigue.\n",
+    "Vamoa a hacer la siguiente modificación que es conocida genéricamente como `Q-learning`. Los métodos de iteración de valores e iteración de  acciones  introducidos en la lección {ref}`Q-learning` son casos particulares, tomando $\\alpha=1$ en lo que sigue.\n",
     "\n",
     "Recordemos que el método iteración de acciones usa el mapeo explicito estado $\\to$ valor y sigue lo siguientes pasos.\n",
     " \n",
     "1. Empieza con una tabla vacía, que mapea estados en valors de las acciones.\n",
-    "1. Al interactuar con el ambiente obtiene la tupla $(s, a, r, s')$ es decir (estado, acción, recompensa, nuevo estado). En este paso  se es necesario decidir cuál acción tomar y realmente no existe un camino simple para tomar la decisión.  Una solución que dimos  en la lección del [bandido multibrazo](ar_Bandido_Multi_brazo.ipynb) fue usar la técnica epsilon-greedy. que retomaremos en esta lección.\n",
-    "1. Una vez se selecciona una acción $a$, se actualiza $Q(s,a)$ usando la aproximación de Bellman \n",
+    "2. Al interactuar con el ambiente obtiene la tupla $(s, a, r, s')$ es decir (estado, acción, recompensa, nuevo estado). En este paso  se es necesario decidir cuál acción tomar y realmente no existe un camino simple para tomar la decisión.  Una solución que dimos  en la lección del {ref}`Bandido Multibrazo` fue usar la técnica epsilon-greedy. que retomaremos en esta lección.\n",
+    "3. Una vez se selecciona una acción $a$, se actualiza $Q(s,a)$ usando la aproximación de Bellman \n",
     "$$\n",
     "Q(s,a) \\gets r + \\gamma \\max_{a' \\in A} Q(s', a').\n",
     "$$\n",
