--- a/Aprendizaje_Reforzado/Cuadernos/ar_Bandido_Multi_brazo .ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_Bandido_Multi_brazo .ipynb
@@ -25,7 +25,7 @@
     "</center>\n",
     "</figure>\n",
     "\n",
-    "Fuente: [Parque Nacional el Leoncito-Wiki commons](https://commons.wikimedia.org/w/index.php?search=paisaje&title=Special:MediaSearch&go=Go&type=image)"
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Flora_parque_nacional_%22El_leoncito%22_09.jpg\">Sangianense</a>, <a href=\"https://creativecommons.org/licenses/by-sa/4.0\">CC BY-SA 4.0</a>, via Wikimedia Commons"
    ]
   },
   {
