--- a/Aprendizaje_Reforzado/Cuadernos/ar_DQN_Learning.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_DQN_Learning.ipynb
@@ -18,6 +18,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Aprendizaje_Reforzado/Imagenes/Bloques.jpg\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "\n",
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Children%27s_number_blocks_being_used_for_learning_to_count_-_51069936953.jpg\">perpetual.fostering</a>, <a href=\"https://creativecommons.org/licenses/by/2.0\">CC BY 2.0</a>, via Wikimedia Commons\n",
+    "\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <span style=\"color:#4361EE\">Introducción</span>"
    ]
   },
