--- a/Aprendizaje_Reforzado/Cuadernos/ar_Metodo_Entropia_Cruzada_Introducción.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_Metodo_Entropia_Cruzada_Introducción.ipynb
@@ -20,7 +20,7 @@
     "</figure>\n",
     "\n",
     "\n",
-    "Fuente: [The evolution of the worlds. Wiki commons](https://commons.wikimedia.org/w/index.php?search=evolution+of+worlds&title=Special:MediaSearch&go=Go&type=image)"
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:The_Evolution_of_Worlds_0070.jpg\">Percival Lowell</a>, Public domain, via Wikimedia Commons"
    ]
   },
   {
