--- a/Aprendizaje_Reforzado/Cuadernos/ar_OpenAI_Gym_CartPole.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_OpenAI_Gym_CartPole.ipynb
@@ -19,7 +19,7 @@
     "</center>\n",
     "</figure>\n",
     "\n",
-    "Fuente [curricle - Wiki commons](https://commons.wikimedia.org/w/index.php?search=cart+pole&title=Special:MediaSearch&go=Go&type=image)"
+    "Fuente <a href=\"https://commons.wikimedia.org/wiki/File:Curricle_(20404499371).jpg\">Internet Archive Book Images</a>, No restrictions, via Wikimedia Commons"
    ]
   },
   {
