--- a/Aprendizaje_Reforzado/Cuadernos/ar_OpenAI_Gym_Frozen_Lake.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_OpenAI_Gym_Frozen_Lake.ipynb
@@ -20,7 +20,7 @@
     "</figure>\n",
     "\n",
     "\n",
-    "Fuente [Survival struggle on the frozen lake. Wiki commons](https://commons.wikimedia.org/w/index.php?search=frozen+lake&title=Special:MediaSearch&go=Go&type=image)"
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Survival_struggle_on_the_frozen_lake.jpg\">Jolovema</a>, <a href=\"https://creativecommons.org/licenses/by-sa/4.0\">CC BY-SA 4.0</a>, via Wikimedia Commons"
    ]
   },
   {
