--- a/Aprendizaje_Reforzado/Cuadernos/ar_OpenAI_Gym_Intro.ipynb
+++ b/Aprendizaje_Reforzado/Cuadernos/ar_OpenAI_Gym_Intro.ipynb
@@ -22,7 +22,7 @@
     "</figure>\n",
     "\n",
     "\n",
-    "Fuente: [Hide and seek. Wiki commons](https://commons.wikimedia.org/w/index.php?search=hide+and+seek&title=Special:MediaSearch&go=Go&type=image)"
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Hide_and_seek_(49907497908).jpg\">Rob Oo from NL</a>, <a href=\"https://creativecommons.org/licenses/by/2.0\">CC BY 2.0</a>, via Wikimedia Commons"
    ]
   },
   {
