--- a/Fundamentacion_Matematica/Cuadernos/am_intro_regresion.ipynb
+++ b/Fundamentacion_Matematica/Cuadernos/am_intro_regresion.ipynb
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En este  segundo intento vamos a entrenar un modelo  de tipo cuadrático de la forma $y = ax^2 + bx +c$.  Usaremos al misma herramienta para entrenar el modelo. La gráfica presenta el resultado."
+    "En este segundo intento vamos a entrenar un modelo  de tipo cuadrático de la forma $y = ax^2 + bx +c$.  Usaremos la misma herramienta para entrenar el modelo. La gráfica presenta el resultado."
    ]
   },
   {
@@ -242,7 +242,7 @@
     "\n",
     "Este resultado, no es realmente tan placentero. Genera dudas, debido a que se espera que el ECM de validación y el de entrenamiento sean similares. Aquí se puede sospechar que los datos de validación no fueron obtenidos adecuadamente. \n",
     "\n",
-    "El siguiente código Python enseña como hacer los cálculos de esta sección."
+    "El siguiente código Python enseña cómo hacer los cálculos de esta sección.\n"
    ]
   },
   {
