--- a/Redes_Neuronales/Cuadernos/RedesNeuronales_intro.ipynb
+++ b/Redes_Neuronales/Cuadernos/RedesNeuronales_intro.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#F72585\">Introducción a Redes Neuronales</span>"
+    "# <span style=\"color:#F72585\"><center>Introducción a Redes Neuronales</center></span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introducción"
+    "<center>Introducción</center>"
    ]
   },
   {
@@ -23,11 +23,16 @@
     "tags": []
    },
    "source": [
+    "<center>\n",
     "<figure>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/mind-544404__340.webp\" width=\"600\" height=\"400\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Neuronales/Imagenes/mind-544404__340.webp\" width=\"600\" height=\"400\" align=\"center\" /> \n",
     "</figure>\n",
+    "</center>\n",
     "\n",
-    "Fuente: [imágenes libres en pixabay](https://pixabay.com/es/images/search/neurons/)"
+    "<center>\n",
+    "\n",
+    "Fuente: [imágenes libres en pixabay](https://pixabay.com/es/images/search/neurons/)\n",
+    "</center>"
    ]
   },
   {
@@ -75,7 +80,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/brain-5885161_960_720.webp\" width=\"500\" height=\"400\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Neuronales/Imagenes/brain-5885161_960_720.webp\" width=\"500\" height=\"400\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -100,7 +105,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/Structure-Of-Neurons-In-Brain.jpeg\" width=\"600\" height=\"300\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Neuronales/Imagenes/Structure-Of-Neurons-In-Brain.jpeg\" width=\"600\" height=\"300\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -117,14 +122,14 @@
     "tags": []
    },
    "source": [
-    "Las células nerviosas típicas del cerebro humano se compone de cuatro partes:\n",
+    "Las células nerviosas típicas del cerebro humano se componen de cuatro partes:\n",
     "\n",
     "1. **Función de la Dendrita**. Recibe las señales de otras neuronas.\n",
     "2. **Soma (cuerpo celular)**. Suma todas las señales entrantes para generar una señal total de entrada(input).\n",
     "3. **Estructura del Axón**. Cuando la suma sobrepasa un cierto umbral numérico, la neurona se activa, dispara y la señal viaja a través del axón hacia otras neuronas.\n",
     "4. **Trabajo de la Sinapsis**. Es el punto donde se realiza la interconexión de una neurona con otras neuronas. La cantidad de la señal transmitida depende en la fuerza (peso sináptico) de las conexiones. Las conexiones pueden ser inhibidoras (disminuyendo la fuerza) o de excitación (aumentando la fuerza) en principio.\n",
     "\n",
-    "Así pues, una **Red Neuronal** es, en general una **red altamente interconectada** de billones de neuronas con trillones de interconexiones entre ellas."
+    "Así pues, una **Red Neuronal** es, en general una **red altamente interconectada** de billones de neuronas con trillones de interconexiones entre ellas.\n"
    ]
   },
   {
@@ -133,7 +138,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/neurons-1773922__340.webp\" width=\"600\" height=\"300\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Neuronales/Imagenes/neurons-1773922__340.webp\" width=\"600\" height=\"300\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -158,7 +163,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/electronics-3007664_960_720.jpg\" width=\"600\" height=\"300\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Neuronales/Imagenes/electronics-3007664_960_720.jpg\" width=\"600\" height=\"300\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -171,7 +176,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/neurona_artificial.png\" width=\"600\" height=\"300\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Neuronales/Imagenes/neurona_artificial.png\" width=\"600\" height=\"300\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -184,7 +189,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/neural_network.png\" width=\"600\" height=\"300\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Neuronales/Imagenes/neural_network.png\" width=\"600\" height=\"300\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -200,7 +205,7 @@
     "tags": []
    },
    "source": [
-    "Las **dendritas** in las Redes Neuronales Biológicas son un análogo a las entradas conteniendo un peso especifico basada en la interconexión \"sináptica\" presente en la Red Neuronal Artificial.\n",
+    "Las **dendritas** en las Redes Neuronales Biológicas son un análogo a las entradas conteniendo un peso específico basada en la interconexión \"sináptica\" presente en la Red Neuronal Artificial.\n",
     "\n",
     "El **cuerpo celular** es comparable a la unidad artificial llamada \"neurona\" en una Red Neuronal Artificial, que también comprende la suma de señales y umbral de activación.\n",
     "\n",
@@ -227,7 +232,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/RN_modernas.png\" width=\"800\" height=\"500\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Neuronales/Imagenes/RN_modernas.png\" width=\"800\" height=\"500\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -245,12 +250,12 @@
    "source": [
     "1. **Red neuronal de perceptrón multicapa**. Estas redes utilizan **más de una capa oculta** de neuronas, a diferencia del perceptrón de una sola capa. También se conocen como Redes neuronales de alimentación profunda.\n",
     "\n",
-    "1. **RNA convolucional**. Esta redes se basan en el concepto matemáticos de convolución. Esencialmente se basan en filtros que se aplican por ejemplo a las imágenes. Los filtros son estimados para cada red.\n",
+    "1. **RNA convolucional**. Estas redes se basan en el concepto matemáticos de convolución. Esencialmente se basan en filtros que se aplican por ejemplo a las imágenes. Los filtros son estimados para cada red.\n",
     "\n",
     "1. **Transformer**. Estas redes son especiales para el tratamiento de procesamiento de lenguaje natural. Recientemente han sido aplicadas a series de tiempo e imágenes. Se basan en el concepto de auto-atención.\n",
     "\n",
-    "1. **Red neuronal recurrente**. Tipo de red neuronal en la que las neuronas de cada capa oculta tienen **auto-conexiones**. Las redes neuronales recurrentes **poseen memoria**. En cualquier caso, la neurona de capa oculta recibe la activación de la siguiente capa, así como su valor de activación anterior. Muy usadas principalmente emn series de tiempo. Los modelos más conocidos con LSTM y GRU.\n",
-    "1. **Red autocodificadora** o auto-encoder. Es esencialmente un perceptrón multicapa de múltiples usos como parte de otras arquitecturas. Por sí mismas son útiles para hacer reducción de dimensión de los datos. "
+    "1. **Red neuronal recurrente**. Tipo de red neuronal en la que las neuronas de cada capa oculta tienen **auto-conexiones**. Las redes neuronales recurrentes **poseen memoria**. En cualquier caso, la neurona de capa oculta recibe la activación de la siguiente capa, así como su valor de activación anterior. Muy usadas principalmente en series de tiempo. Los modelos más conocidos con LSTM y GRU.\n",
+    "1. **Red autocodificadora** o auto-encoder. Es esencialmente un perceptrón multicapa de múltiples usos como parte de otras arquitecturas. Por sí mismas son útiles para hacer reducción de dimensión de los datos.\n"
    ]
   },
   {
@@ -283,7 +288,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Redes_Neuronales/Imagenes/ANN_Capa_Oculta.png\" width=\"800\" height=\"600\" align=\"center\" /> \n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Neuronales/Imagenes/ANN_Capa_Oculta.png\" width=\"800\" height=\"600\" align=\"center\" /> \n",
     "</center>   \n",
     "</figure>\n",
     "\n",
@@ -408,7 +413,7 @@
    "source": [
     "La ecuación (1) es una **transformación afín**, que puede ser expresada en coordenadas homogéneas de la siguiente manera:\n",
     "\n",
-    "$\\tilde{x} = (x,1)$, $\\tilde{z}^1 = (z^1,1)$. Let $\\tilde{W}$ defined as:\n",
+    "$\\tilde{x} = (x,1)$, $\\tilde{z}^1 = (z^1,1)$. Let $\\tilde{W}$ definida como:\n",
     "\n",
     "$$\n",
     "\\tilde{W}^1 = \\begin{pmatrix} W^1 & 0\\\\ b^1 & 1\\end{pmatrix}\n",
@@ -555,7 +560,7 @@
     "tags": []
    },
    "source": [
-    "## <span style=\"color:blue\">Una RNA es una función vectorial</span> "
+    "## <span style=\"color:#4361EE\">Una RNA es una función vectorial</span> "
    ]
   },
   {
@@ -594,7 +599,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.8 64-bit",
+   "display_name": "Python 3.9.13 ('work')",
    "language": "python",
    "name": "python3"
   },
@@ -608,12 +613,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.13"
   },
   "toc-autonumbering": false,
   "vscode": {
    "interpreter": {
-    "hash": "cf92aa13fedf815d5c8dd192b8d835913fde3e8bc926b2a0ad6cc74ef2ba3ca2"
+    "hash": "3620b340ed2ed479d71e72c732c6d6a6eac39d8adbece51414abdea5ed84aec5"
    }
   }
  },
