--- a/Redes_Neuronales/Cuadernos/Intro_Keras_Functional.ipynb
+++ b/Redes_Neuronales/Cuadernos/Intro_Keras_Functional.ipynb
@@ -5,7 +5,24 @@
    "id": "spiritual-safety",
    "metadata": {},
    "source": [
-    "# <span style=\"color:#F72585\">Introducción a la API funcional de Keras</span>"
+    "# <span style=\"color:#F72585\"><center>Introducción a la API funcional de Keras</center></span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86449a07",
+   "metadata": {},
+   "source": [
+    "<figure>\n",
+    "<center>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Alejandria/main/Redes_Neuronales/Imagenes/Funcional.JPG\" width=\"700\" height=\"400\" align=\"center\" /> \n",
+    "</center>   \n",
+    "</figure>\n",
+    "<center>\n",
+    "\n",
+    "Fuente: <a href=\"https://commons.wikimedia.org/wiki/File:Functional_group_with_sulfur_compounds_sulfone_sulfonic_acid_sulfonamide_2.JPG\">Bin im Garten</a>, <a href=\"https://creativecommons.org/licenses/by-sa/3.0\">CC BY-SA 3.0</a>, via Wikimedia Commons\n",
+    "\n",
+    "</center>"
    ]
   },
   {
@@ -26,15 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "valid-checkout",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\User\\anaconda3\\envs\\work\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.3\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Version de Tensorflow =  2.4.1\n"
+      "Version de Tensorflow =  2.9.1\n"
      ]
     }
    ],
@@ -72,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "included-columbia",
    "metadata": {},
    "outputs": [],
@@ -88,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "personalized-concrete",
    "metadata": {},
    "outputs": [
@@ -98,7 +123,7 @@
        "(10000, 28, 28, 1)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "indonesian-toner",
    "metadata": {},
    "outputs": [],
@@ -137,17 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "italic-power",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<BatchDataset shapes: ((None, 28, 28, 1), (None,)), types: (tf.float64, tf.uint8)>"
+       "<BatchDataset element_spec=(TensorSpec(shape=(None, 28, 28, 1), dtype=tf.float64, name=None), TensorSpec(shape=(None,), dtype=tf.uint8, name=None))>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "consolidated-affect",
    "metadata": {},
    "outputs": [],
@@ -219,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "polar-nelson",
    "metadata": {},
    "outputs": [],
@@ -240,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "amateur-array",
    "metadata": {},
    "outputs": [
@@ -250,7 +275,7 @@
        "1.1769392"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "breathing-frederick",
    "metadata": {},
    "outputs": [
@@ -282,7 +307,7 @@
        "1.176939193690798"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "ranking-spank",
    "metadata": {},
    "outputs": [
@@ -313,7 +338,7 @@
        "1.176939193690798"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "opened-galaxy",
    "metadata": {},
    "outputs": [],
@@ -370,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "multiple-ultimate",
    "metadata": {},
    "outputs": [],
@@ -398,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "id": "developing-watts",
    "metadata": {},
    "outputs": [],
@@ -422,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "id": "amended-definition",
    "metadata": {},
    "outputs": [],
@@ -451,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "id": "adult-saying",
    "metadata": {},
    "outputs": [
@@ -459,11 +484,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Pérdida: 0.13630391657352448, Exactitud: 0.9592499732971191, Pérdida de prueba: 5.388667106628418, Exactitud de prueba 98.25999450683594\n",
-      "Epoch 2, Pérdida: 0.04190303012728691, Exactitud: 0.9872333407402039, Pérdida de prueba: 5.171141624450684, Exactitud de prueba 98.3699951171875\n",
-      "Epoch 3, Pérdida: 0.022309603169560432, Exactitud: 0.9925833344459534, Pérdida de prueba: 5.160597324371338, Exactitud de prueba 98.43999481201172\n",
-      "Epoch 4, Pérdida: 0.013041360303759575, Exactitud: 0.9960500001907349, Pérdida de prueba: 5.817919731140137, Exactitud de prueba 98.31999969482422\n",
-      "Epoch 5, Pérdida: 0.009497422724962234, Exactitud: 0.9969666600227356, Pérdida de prueba: 6.04024600982666, Exactitud de prueba 98.4000015258789\n"
+      "Epoch 1, Pérdida: 0.13836877048015594, Exactitud: 0.9588500261306763, Pérdida de prueba: 0.06696019321680069, Exactitud de prueba 0.9782000184059143\n",
+      "Epoch 2, Pérdida: 0.042073335498571396, Exactitud: 0.9869499802589417, Pérdida de prueba: 0.049123987555503845, Exactitud de prueba 0.9832000136375427\n",
+      "Epoch 3, Pérdida: 0.020745323970913887, Exactitud: 0.9932833313941956, Pérdida de prueba: 0.05571064352989197, Exactitud de prueba 0.9828000068664551\n",
+      "Epoch 4, Pérdida: 0.012428789399564266, Exactitud: 0.9957666397094727, Pérdida de prueba: 0.062411025166511536, Exactitud de prueba 0.9830999970436096\n",
+      "Epoch 5, Pérdida: 0.008782007731497288, Exactitud: 0.9970999956130981, Pérdida de prueba: 0.07019472122192383, Exactitud de prueba 0.9803000092506409\n"
      ]
     }
    ],
@@ -474,7 +499,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.8 64-bit",
+   "display_name": "Python 3.9.13 ('work')",
    "language": "python",
    "name": "python3"
   },
@@ -488,11 +513,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "cf92aa13fedf815d5c8dd192b8d835913fde3e8bc926b2a0ad6cc74ef2ba3ca2"
+    "hash": "3620b340ed2ed479d71e72c732c6d6a6eac39d8adbece51414abdea5ed84aec5"
    }
   }
  },
